# apriori-window

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  papers.html  skills-lock.json  tips.md
apriori_window_original/: Cargo.toml
apriori_window_original/data/: settings.json
apriori_window_original/data/output/: gt_patterns_chicago.csv  gt_patterns_chicago_new.csv  gt_patterns_chicago_old.csv  gt_patterns_kosarak.csv  gt_patterns_kosarak_new.csv  gt_patterns_kosarak_old.csv  gt_patterns_onlineretail.csv  gt_patterns_onlineretail_new.csv  gt_patterns_onlineretail_old.csv  gt_patterns_retail.csv  gt_patterns_retail_new.csv  gt_patterns_retail_old.csv
apriori_window_original/data/output1/: gt_patterns_chicago.csv  (+6 more)
apriori_window_original/doc/: proof.md  requirements.md
apriori_window_original/python/: apriori_window.py  apriori_window_pruned.py
apriori_window_original/src/: apriori.rs  interval.rs  io.rs  lib.rs  main.rs  util.rs
apriori_window_suite/: Cargo.toml
apriori_window_suite/data/: sample_basket.txt  sample_events.json  settings.json  settings_phase1.json  settings_phase2.json
apriori_window_suite/doc/: OVERVIEW.md  README.md  dataset.md  deep-research-report.md  experiment_design.md  impl_log.md  impl_plan.md  phase1_impl_plan.md  phase2_impl_plan.md
apriori_window_suite/python/: apriori_window_basket.py  event_attribution.py  event_correlator.py
apriori_window_suite/src/: apriori.rs  baselines.rs  basket.rs  correlator.rs  evaluate.rs  interval.rs  io.rs  lib.rs  main.rs  pipeline.rs  st_correlator.rs  synth.rs  util.rs
(+1022 files in other folders)
