[package]
name = "new_apriori_window"
version = "0.1.0"
edition = "2021"

[lib]
name = "new_apriori_window"
path = "src/lib.rs"

[[bin]]
name = "new_apriori_window"
path = "src/main.rs"

[dependencies]
itertools = "0.14"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
